# pokerengine

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/: dependabot.yaml
cmake/: CPM.cmake  Packages.cmake
cpp/include/pokerengine/: bits.hpp  constants.hpp  enums.hpp  types.hpp  utils.hpp
cpp/include/pokerengine/card/: card.hpp  cards.hpp  hand.hpp
cpp/include/pokerengine/engine/: engine.hpp  player.hpp  positions.hpp  pot.hpp  round.hpp
cpp/include/pokerengine/evaluator/: evaluation.hpp  result.hpp
cpp/src/: bits.cpp
examples/: game.py  hand_straight.py
include/pokerengine/: bits.hpp  constants.hpp  engine.hpp  enums.hpp  pokerengine.hpp  pyconstants.hpp  pyenums.hpp  string.hpp  vector.hpp
include/pokerengine/card/: card.hpp  cards.hpp  hand.hpp
include/pokerengine/engine/: action.hpp  engine.hpp  player.hpp  positions.hpp  pot.hpp  round.hpp
include/pokerengine/evaluator/: evaluation.hpp  evaluation_result.hpp  lookup_tables.hpp  result.hpp
include/pokerengine/pycard/: pycard.hpp  pycards.hpp  pyhand.hpp
include/pokerengine/pyengine/: pyaction.hpp  pyengine.hpp  pyengine__init__.hpp  pyplayer.hpp  pypositions.hpp  pyround.hpp
include/pokerengine/pyevaluation/: pyevaluation_result.hpp  pyresult.hpp
include/pokerengine/python/: pycard.hpp  pyconstants.hpp  pyengine.hpp  pyenums.hpp  pyevaluation.hpp  python.hpp
python/: pokerengine.cpp  pyconstants.hpp  pyenums.hpp  pyutils.hpp
python/pokerengine/: __init__.py  card.py  constants.py  engine.py  enums.py  evaluation.py
python/pokerengine/pokerengine_core/: __init__.pyi  constants.pyi  utils.pyi
python/pokerengine/pokerengine_core/card/: __init__.pyi  card.pyi  cards.pyi  hand.pyi
python/pokerengine/pokerengine_core/engine/: __init__.pyi  engine.pyi  player.pyi  positions.pyi  pot.pyi  round.pyi
python/pokerengine/pokerengine_core/enums/: __init__.pyi  action.pyi  combination.pyi  position.pyi  rank.pyi  round.pyi  state.pyi  suit.pyi
python/pokerengine/pokerengine_core/evaluation/: evaluation_result.pyi  result.pyi
python/pycard/: pycard.hpp  pycard__init__.hpp  pycards.hpp  pyhand.hpp
python/pyengine/: pyengine.hpp  pyengine__init__.hpp  pyplayer.hpp  pypositions.hpp  pypot.hpp  pyround.hpp
python/pyenums/: pyenums.hpp  pyenums__init__.hpp
python/pyevaluation/: pyevaluation__init__.hpp  pyresult.hpp
src/: pokerengine.cpp
src/pokerengine/: __init__.py  card.py  constants.py  engine.py  evaluation.py
src/pokerengine/pokerengine_core/: __init__.pyi  card.pyi  constants.pyi  engine.pyi  evaluation.pyi  utils.pyi
src/pokerengine/pokerengine_core/card/: __init__.pyi  card.pyi  cards.pyi  hand.pyi
src/pokerengine/pokerengine_core/engine/: __init__.pyi  action.pyi  engine.pyi  player.pyi  positions.pyi  pot.pyi  round.pyi
src/pokerengine/pokerengine_core/enums/: action.pyi  combination.pyi  position.pyi  rank.pyi  round.pyi  state.pyi  suit.pyi
src/pokerengine/pokerengine_core/evaluation/: __init__.pyi  evaluation_result.pyi  result.pyi
