[build-system]
requires = ["scikit-build-core==0.6.1", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pokerengine"
version = "1.6"
description = "Poker Library"
readme = "README.md"
authors = [
    {name = "raindinners"}
]
requires-python = ">=3.8"
keywords = [
    "raindinners",
    "engine",
    "poker",
    "texas",
    "holdem",
    "texas-holdem",
    "texas_holdem",
    "pybind11",
    "scikit-build-core",
    "fast",
    "c++",
    "magic_enum",
    "stubs",
    "python-stubs",
    "python_stubs",
    "pythonstubs",
    "py-stubs",
    "py_stubs",
    "pystubs",
]

[project.optional-dependencies]
dev = [
    "black~=23.10.0",
    "isort~=5.12.0",
    "ruff~=0.1.1",
    "pre-commit~=3.5.0",
]

build = [
    "build~=1.2.1",
    "twine~=5.0.0",
]

[tool.ruff]
line-length = 99
select = [
    "C4",
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
]
ignore = [
    "E501",
]
exclude = [
    ".git",
    ".venv",
]
force-exclude = true

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.git
    \.ruff_cache
    \.venv
)
'''

[tool.isort]
profile = "black"
src_paths = ["pokerengine"]
